ci: fix YAML (single-line guard), declare webapp in manifest, add health endpoint

--- a/appsscript.json
+++ b/appsscript.json
@@ -4,7 +4,7 @@
   "exceptionLogging": "CLOUD_LOGGING",
   "runtimeVersion": "V8",
   "webapp": {
-    "access": "DOMAIN",             // 也可用: "ANYONE" 或 "ANYONE_ANONYMOUS"
-    "executeAs": "USER_DEPLOYING"   // "USER_DEPLOYING"=我；"USER_ACCESSING"=存取者
+    "access": "DOMAIN",
+    "executeAs": "USER_DEPLOYING"
   }
 }
