--- a/.github/workflows/gas-deploy.yml
+++ b/.github/workflows/gas-deploy.yml
@@ -37,15 +37,9 @@ jobs:
         if: ${{ hashFiles('package-lock.json') == '' && hashFiles('package.json') != '' }}
         run: npm install
 
-      - name: Run unit tests (if any)
-        if: ${{ hashFiles('package.json') != '' }}
-        run: npm test --if-present
-
-      # 使用最新版 clasp（依你的要求）
       - name: Install latest clasp
         run: npm i -g @google/clasp
 
-      # 合併：寫入 + 解碼 + 正規化（tokens.default -> token）
       - name: Write ~/.clasprc.json (decode/normalize/validate)
         env:
           CLASPRC_JSON: ${{ secrets.CLASPRC_JSON }}
@@ -54,65 +48,40 @@ jobs:
           if [ -z "${CLASPRC_JSON:-}" ]; then
             echo "::error::Missing secret CLASPRC_JSON"; exit 1
           fi
-          node -e "
-            const fs=require('fs');
-            const p=process.env.HOME+'/.clasprc.json';
-            let s=process.env.CLASPRC_JSON||'';
-            let j;
-            try { j=JSON.parse(s); }
-            catch(e){
-              s=s.replace(/\s+/g,'');
-              j=JSON.parse(Buffer.from(s,'base64').toString());
-            }
-            if(!j.token && j.tokens && j.tokens.default){ j.token=j.tokens.default; }
-            fs.writeFileSync(p, JSON.stringify(j,null,2));
-          "
+          node -e "const fs=require('fs'); const p=process.env.HOME+'/.clasprc.json'; let s=process.env.CLASPRC_JSON||''; let j; try{ j=JSON.parse(s);}catch(e){ s=s.replace(/\s+/g,''); j=JSON.parse(Buffer.from(s,'base64').toString()); } if(!j.token && j.tokens && j.tokens.default){ j.token=j.tokens.default; } fs.writeFileSync(p, JSON.stringify(j,null,2));"
           test -s "$HOME/.clasprc.json"
           cp "$HOME/.clasprc.json" "$GITHUB_WORKSPACE/.clasprc.json"
 
       - name: Ensure .clasp.json exists (do not print it)
-        run: |
-          if [ ! -f ".clasp.json" ]; then
-            echo "::error::.clasp.json missing. Commit one with your scriptId."; exit 1
-          fi
-          node -e "const j=require('./.clasp.json'); if(!j.scriptId){process.exit(2)}"
+        run: node -e "const j=require('./.clasp.json'); if(!j.scriptId){process.stderr.write('.clasp.json missing scriptId\\n'); process.exit(2)}"
 
-      # Sanity：在 log 顯示長度與雜湊（改用 Node，避免 Here-Doc 造成 YAML 雷）
+      # ✅ 單行 Guard：manifest 必須包含 webapp 區塊
+      - name: Guard: manifest must include webapp block
+        run: node -e "const j=require('./appsscript.json'); if(!j.webapp||!j.webapp.access||!j.webapp.executeAs){console.error('appsscript.json missing webapp config'); process.exit(1);} console.log('webapp OK:', j.webapp);"
+
+      # Sanity：顯示部署 ID 長度與 SHA256 指紋
       - name: Sanity check DEPLOY_ID (length & hash)
         env:
           DEPLOY_ID: ${{ secrets.GAS_DEPLOYMENT_ID }}
-        run: |
-          node -e "
-            const crypto=require('crypto');
-            const id=process.env.DEPLOY_ID||'';
-            console.log('DEPLOY_ID.length =', id.length);
-            console.log('DEPLOY_ID.sha256 =', crypto.createHash('sha256').update(id).digest('hex'));
-            if(!id || id.length<20){ console.error('DEPLOY_ID looks empty/too short; abort.'); process.exit(1); }
-          "
+        run: node -e "const crypto=require('crypto'); const id=process.env.DEPLOY_ID||''; console.log('DEPLOY_ID.length =', id.length); console.log('DEPLOY_ID.sha256 =', crypto.createHash('sha256').update(id).digest('hex')); if(!id||id.length<20){process.exit(1)}"
 
-      # BEFORE：取部署清單（JSON 優先；失敗則解析文字輸出）
+      # BEFORE：取部署清單（JSON 優先；失敗則解析文字）
       - name: Snapshot deployments (BEFORE)
         run: |
           set -e
-          if clasp list-deployments --json > before.json 2>/dev/null; then
-            echo "before: got JSON"
+          if clasp list-deployments --json > raw_before.json 2>/dev/null; then
+            node -e "const fs=require('fs'); const j=JSON.parse(fs.readFileSync('raw_before.json','utf8')); const arr=(Array.isArray(j)?j:(j.deployments||[])).map(x=>x.deploymentId||x.deployment_id||x.id).filter(Boolean); fs.writeFileSync('before.json', JSON.stringify([...new Set(arr)])); console.log('BEFORE IDs:', arr.join(',')||'(none)');"
           else
-            echo "before: fallback to text parse"
+            echo 'before: fallback to text parse'
             clasp list-deployments > before.txt || clasp deployments > before.txt || true
             node -e "const fs=require('fs'); const t=fs.readFileSync('before.txt','utf8'); const ids=[...t.matchAll(/AK[a-zA-Z0-9_-]{20,}/g)].map(m=>m[0]); fs.writeFileSync('before.json', JSON.stringify([...new Set(ids)])); console.log('BEFORE IDs:', ids.join(',')||'(none)');"
           fi
 
-      # 驗證：目標部署 ID 必須存在於「這個 Script」
       - name: Ensure target deployment exists (BEFORE)
         env:
           DEPLOY_ID: ${{ secrets.GAS_DEPLOYMENT_ID }}
-        run: |
-          node -e "const fs=require('fs'),id=process.env.DEPLOY_ID; const arr=JSON.parse(fs.readFileSync('before.json','utf8')); if(!Array.isArray(arr) || !arr.includes(id)){console.error('Target deployment ID NOT found in THIS script BEFORE deploy. IDs=',arr); process.exit(1)} console.log('Target deployment exists BEFORE deploy.');"
+        run: node -e "const fs=require('fs'), id=process.env.DEPLOY_ID; const arr=JSON.parse(fs.readFileSync('before.json','utf8')); if(!Array.isArray(arr)||!arr.includes(id)){ console.error('Target deployment ID NOT found BEFORE deploy. IDs=',arr); process.exit(1);} console.log('Target deployment exists BEFORE deploy.');"
 
-      - name: Guard: manifest must include webapp block
-        run: node -e "const j=require('./appsscript.json'); if(!j.webapp||!j.webapp.access||!j.webapp.executeAs){console.error('appsscript.json missing webapp config'); process.exit(1);} console.log('webapp OK:', j.webapp);"
-
-          
       - name: Push to Apps Script
         run: clasp push -f
 
@@ -127,29 +96,38 @@ jobs:
           fi
           clasp deploy --deploymentId "$DEPLOY_ID" -d "CI ${GITHUB_SHA}"
 
-      # AFTER：再取清單（JSON 優先、文字備援）
+      # AFTER：再取清單
       - name: Snapshot deployments (AFTER)
         run: |
           set -e
-          if clasp list-deployments --json > after.json 2>/dev/null; then
-            echo "after: got JSON"
+          if clasp list-deployments --json > raw_after.json 2>/dev/null; then
+            node -e "const fs=require('fs'); const j=JSON.parse(fs.readFileSync('raw_after.json','utf8')); const arr=(Array.isArray(j)?j:(j.deployments||[])).map(x=>x.deploymentId||x.deployment_id||x.id).filter(Boolean); fs.writeFileSync('after.json', JSON.stringify([...new Set(arr)])); console.log('AFTER IDs:', arr.join(',')||'(none)');"
           else
-            echo "after: fallback to text parse"
+            echo 'after: fallback to text parse'
             clasp list-deployments > after.txt || clasp deployments > after.txt || true
             node -e "const fs=require('fs'); const t=fs.readFileSync('after.txt','utf8'); const ids=[...t.matchAll(/AK[a-zA-Z0-9_-]{20,}/g)].map(m=>m[0]); fs.writeFileSync('after.json', JSON.stringify([...new Set(ids)])); console.log('AFTER IDs:', ids.join(',')||'(none)');"
           fi
 
-      # 驗證：數量不可變多、且目標 ID 還在
       - name: Verify no new deployment was created
         env:
           DEPLOY_ID: ${{ secrets.GAS_DEPLOYMENT_ID }}
-        run: |
-          node -e "const fs=require('fs'),id=process.env.DEPLOY_ID; const b=JSON.parse(fs.readFileSync('before.json','utf8')); const a=JSON.parse(fs.readFileSync('after.json','utf8')); const cntB=Array.isArray(b)?b.length:0; const cntA=Array.isArray(a)?a.length:0; const has=Array.isArray(a)&&a.includes(id); console.log('before =',cntB,', after =',cntA,', hasTarget =',has); if(!has){console.error('Target deployment ID not found AFTER deploy');process.exit(1)} if(cntA>cntB){console.error('New deployment seems created!');process.exit(1)}"
+        run: node -e "const fs=require('fs'), id=process.env.DEPLOY_ID; const b=JSON.parse(fs.readFileSync('before.json','utf8')); const a=JSON.parse(fs.readFileSync('after.json','utf8')); const cntB=Array.isArray(b)?b.length:0; const cntA=Array.isArray(a)?a.length:0; const has=Array.isArray(a)&&a.includes(id); console.log('before =',cntB,', after =',cntA,', hasTarget =',has); if(!has){console.error('Target deployment ID not found AFTER deploy');process.exit(1)} if(cntA>cntB){console.error('New deployment seems created!');process.exit(1)}"
 
-      # 驗證：保留清單都還在（相容單/複數變數名）
       - name: Verify preserved deployments still exist (AFTER)
         env:
           PRESERVE_IDS: ${{ vars.PRESERVE_DEPLOYMENT_IDS }}
           PRESERVE_ID: ${{ vars.PRESERVE_DEPLOYMENT_ID }}
+        run: node -e "const fs=require('fs'); const a=JSON.parse(fs.readFileSync('after.json','utf8')); const env=(process.env.PRESERVE_IDS||process.env.PRESERVE_ID||'').trim(); if(!env){ console.log('No PRESERVE_DEPLOYMENT_IDS set; skip'); process.exit(0);} const ids=env.split(/[,\s]+/).filter(Boolean); const miss=ids.filter(id=>!a.includes(id)); if(miss.length){ console.error('Preserved deployments disappeared:', miss.join(',')); process.exit(1);} console.log('All preserved IDs exist AFTER deploy');"
+
+      - name: Post-deploy health check (GET /exec?route=health)
+        env:
+          DEPLOY_ID: ${{ secrets.GAS_DEPLOYMENT_ID }}
         run: |
-          node -e "const fs=require('fs'); const a=JSON.parse(fs.readFileSync('after.json','utf8')); const env=(process.env.PRESERVE_IDS||process.env.PRESERVE_ID||'').trim(); if(!env){ console.log('No PRESERVE_DEPLOYMENT_IDS set; skip'); process.exit(0); } const ids=env.split(/[,\s]+/).filter(Boolean); const miss=ids.filter(id=>!a.includes(id)); if(miss.length){ console.error('Preserved deployments disappeared:', miss.join(',')); process.exit(1); } console.log('All preserved IDs exist AFTER deploy');"
+          set -e
+          URL="https://script.google.com/macros/s/${DEPLOY_ID}/exec?route=health&v=${GITHUB_SHA::7}"
+          echo "GET $URL"
+          code=$(curl -sS -o /dev/null -w "%{http_code}" "$URL" || true)
+          echo "HTTP $code"
+          if [ "$code" != "200" ]; then
+            echo "::error::Health check failed with HTTP $code"; exit 1
+          fi
